# ImageFilter

./: .gitignore  README.md  filelist.txt  pyproject.toml
src/artfilter/: Taskfile.yml  __main__.py  config.json
src/artfliter/: __main__.py  artbook_dedup.py
src/badzfilter/: __main__.py  archive_check_history.json  archive_checker.py
src/bakf/core/: backup.py  demo_bandizip_test.py
src/bakf/test/: demo_backup.py  test_backup.py
src/batchfilter/: Taskfile.yml  __init__.py  __main__.py  config.json  config_manager.py
src/batchfilter/utils/: __init__.py  merge.py
src/common/: archive.py  imgutils_adapter.py  input.py  path.py
src/hashu/: MULTIPROCESS_README.md  Taskfile.yml  __init__.py  __main__.py  demo_sqlite_integration.py  log.py
src/hashu/common/: encoding_utils.py
src/hashu/config/: __init__.py  config.json  config_manager.py  database_config.json
src/hashu/core/: calculate_hash_custom.py  hash_manager.py  sqlite_storage.py
src/hashu/migrate/: README_migrate.md  migrate_json_to_sqlite.py  quick_migrate.py
src/hashu/prepare/: __main__.py
src/hashu/preview/: README.md  README_export.md  config.json  demo_hash_size.py  export_similar.py  run_streamlit.py  size_preview.py  start.bat  streamlit_app.py
src/hashu/sql/: README.md  create_database.sql  database_config.ini  database_manager.py  init_database.py  manage_database.bat  migrate_to_postgresql.py  quick_setup.py  upgrade_database_schema.py
src/hashu/test/: demo_hash_size.py  demo_mobilenet_similarity.py  demo_sqlite_integration.py  demo_ssim_cached.py  demo_ssim_similarity.py  demo_ssim_simple.py  demo_structure_hash.py  test_format_compatibility.db  test_format_compatibility.py  test_hash_export.py
src/hashu/utils/: __init__.py  hash_accelerator.py  hash_cli.py  hash_export.py  hash_process_config.py  image_clarity.py  multiprocess_hash.py  path_uri.py  verify_database.py
src/imgfilter/: Taskfile.yml  __init__.py  __main__.py
src/imgfilter/cli/: commands.py
src/imgfilter/config/: detector_config.toml  factory.py
src/imgfilter/core/: filter.py
src/imgfilter/demo/: __init__.py  demo_dedup.py  rich_input_demo.py
src/imgfilter/detectors/: cluster.py  (+10 more)
src/imgu/: __init__.py  __main__.py
src/langi/: __init__.py  __main__.py  client.py  detector.py  langlib.py
src/rawfilter/: BUGFIX_VIRTUAL_FOLDER.md  Taskfile.yml  __main__.py  cli.py  config.json  core.py  logger_config.py  no_translate_find.py  run.py  test_fix_validation.py  test_virtual_folder_bug.py  uncensored_pruner.py  utils.py  version_pruner.py
src/recruitfilter/: Taskfile.yml  __main__.py
src/renamei/: Taskfile.yml  __main__.py  ad_detector_config.json
src/textfilter/: Taskfile.yml  __main__.py  text_img_filter.py
src/widthfilter/: Taskfile.yml  __init__.py  __main__.py  cli.py  config.py  image_processor.py  logger_setup.py  presets.json  run.py
(+53 files in other folders)
